# jakarta-maps-analyzer

./: .env.example  .gitignore  README.md  clean_data_for_qgis.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test_community_extractor.py
data/processed/: jakarta_pet_market_CLEAN_20250805_014257.csv  jakarta_pet_market_CLEAN_20250805_094255.csv  jakarta_pet_market_CLEAN_20250805_095816.csv  jakarta_pet_market_CLEAN_20250805_102308.csv  jakarta_pet_market_COMPLETE_20250805_102301.csv  jakarta_pet_market_COMPLETE_20250805_103740.csv  jakarta_pet_market_analysis_20250805_013155.csv  jakarta_pet_market_analysis_20250805_014026.csv  jakarta_pet_market_analysis_20250805_014224.csv  jakarta_pet_market_analysis_20250805_014450.csv  jakarta_pet_market_analysis_20250805_092137_partial.csv  jakarta_pet_market_analysis_20250805_092308_partial.csv  jakarta_pet_market_analysis_20250805_092432_partial.csv  jakarta_pet_market_analysis_20250805_092553_partial.csv  jakarta_pet_market_analysis_20250805_092706_partial.csv  jakarta_pet_market_analysis_20250805_092757_partial.csv  jakarta_pet_market_analysis_20250805_092848_partial.csv  jakarta_pet_market_analysis_20250805_093409_partial.csv  jakarta_pet_market_analysis_20250805_093519_partial.csv  jakarta_pet_market_analysis_20250805_093629_partial.csv  jakarta_pet_market_analysis_20250805_093729_partial.csv  jakarta_pet_market_analysis_20250805_093822_partial.csv  jakarta_pet_market_analysis_20250805_093920_partial.csv  jakarta_pet_market_analysis_20250805_093959_partial.csv  jakarta_pet_market_analysis_20250805_094103_partial.csv  jakarta_pet_market_analysis_20250805_094151_partial.csv  jakarta_pet_market_analysis_20250805_094535_partial.csv  jakarta_pet_market_analysis_20250805_094650_partial.csv  (+39 more)
docs/: API_KEY_DIAGNOSIS.md  COMMUNITY_EXTRACTION_README.md  COMMUNITY_EXTRACTOR_SOLUTION.md  MARKET_ANALYSIS_GUIDE.md  README.md  SECURITY_SETUP.md  TESTING.md
scripts/: auto_demo.py  demo_analysis.py  quick_analysis.py  quick_test.py  run_analysis.py
tests/: __init__.py  test_api_integration.py  test_config.py  test_csv_processing.py  test_data_processing.py  test_error_handling.py  test_validation.py
(+36 files in other folders)
